--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,8 @@ script:
   - docker build -t buildozer3 .
 
 after_success:
+  - docker images
   - |
     if [ "$TRAVIS_BRANCH" == "master" ]; then
-      curl --data build=true -X POST https://cloud.docker.com/api/build/v1/source/"$DOCKER_ID"/trigger/"$DOKCER_KEY"/call/
+      curl -H "Content-Type: application/json" --data '{"source_type": "Branch", "source_name": "master"}' -X POST https://cloud.docker.com/api/build/v1/source/"$DOCKER_ID"/trigger/"$DOKCER_KEY"/call/
     fi
